# ace-framework

./: .gitignore  Grade 1 LEAP- Language Excellence & Assessment.csv  README.md  local_test_setup.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_end_to_end.py  run_parser_test.py
config/: settings.py
config/models/: __init__.py  artifact_models.py  core_models.py
processors/: __init__.py  ai_client.py  audio_processor.py  base.py  mcq_processor.py  text_processor.py
services/aggregator/: __init__.py  csv_exporter.py  main.py  pdf_generator.py  report_generator.py  result_collector.py  score_aggregator.py
services/ingestion/: __init__.py  csv_parser.py  main.py  normalizer.py  s3_handler.py
services/interpreter/: __init__.py  config_loader.py  main.py  router.py  sqs_sender.py
services/orchestrator/: completion_service.py  processor_router.py  task_orchestrator.py
services/storage/: local_s3_backend.py  real_s3_backend.py
