[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ace-framework"
version = "1.0.0"
description = "ACE Assessment Framework - Course-agnostic evaluation system"
authors = [{name = "ACE Framework Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
ace-ingestion = "services.ingestion.main:cli"
ace-interpreter = "services.interpreter.main:cli"
ace-processor = "processors.base.main:cli"
ace-aggregator = "services.aggregator.main:cli"
ace-reporter = "services.reporter.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "processors*", "config*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
